# neocortex

./: .bazelrc  BUILD.bazel  MODULE.bazel
neocortex/: board.cpp  move.cpp  perft.cpp  piece.cpp  piece.h  position.cpp  square.cpp  square.h  util.cpp  util.h  zobrist.cpp  zobrist.h
test/: test.cpp
