load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = glob(["neocortex/*.h"]),
)

cc_library(
    name = "attacks",
    srcs = ["neocortex/attacks.cpp"],
    hdrs = ["neocortex/attacks.h"],
    deps = [
        ":bitboard",
        ":magic_consts",
        ":piece",
        ":square",
        ":util",
    ],
)

cc_library(
    name = "bitboard",
    srcs = ["neocortex/bitboard.cpp"],
    hdrs = ["neocortex/bitboard.h"],
    deps = [
        ":platform",
        ":square",
    ],
)

cc_library(
    name = "board",
    srcs = ["neocortex/board.cpp"],
    hdrs = ["neocortex/board.h"],
    deps = [
        ":attacks",
        ":bitboard",
        ":eval_consts",
        ":piece",
        ":square",
        ":util",
        ":zobrist",
    ],
)

cc_library(
    name = "eval",
    srcs = ["neocortex/eval.cpp"],
    hdrs = ["neocortex/eval.h"],
    deps = [
        ":position",
    ],
)


cc_library(
    name = "eval_consts",
    srcs = ["neocortex/eval_consts.cpp"],
    hdrs = ["neocortex/eval_consts.h"],
    deps = [
        ":piece",
    ],
)

cc_library(
    name = "magic_consts",
    hdrs = ["neocortex/magic_consts.h"],
)

cc_library(
    name = "move",
    srcs = ["neocortex/move.cpp"],
    hdrs = ["neocortex/move.h"],
    deps = [
        ":attacks",
        ":bitboard",
        ":board",
        ":piece",
        ":square",
    ],
)

cc_library(
    name = "perft",
    srcs = ["neocortex/perft.cpp"],
    hdrs = ["neocortex/perft.h"],
    deps = [
      ":position",
      ":util",
    ],
)

cc_library(
    name = "piece",
    srcs = ["neocortex/piece.cpp"],
    hdrs = ["neocortex/piece.h"],
)

cc_library(
    name = "platform",
    hdrs = ["neocortex/platform.h"],
)

cc_library(
    name = "position",
    srcs = ["neocortex/position.cpp"],
    hdrs = ["neocortex/position.h"],
    deps = [
        ":board",
        ":eval_consts",
        ":move",
        ":piece",
        ":square",
    ],
)

cc_library(
    name = "search",
    srcs = ["neocortex/search.cpp"],
    hdrs = ["neocortex/search.h"],
    deps = [
      ":eval",
      ":position",
      ":move",
      ":tt",
    ]
)


cc_library(
    name = "square",
    srcs = ["neocortex/square.cpp"],
    hdrs = ["neocortex/square.h"],
)

cc_library(
    name = "tt",
    srcs = ["neocortex/tt.cpp"],
    hdrs = ["neocortex/tt.h"],
    deps = [
      ":eval",
      ":move",
      ":zobrist",
    ],
)

cc_library(
    name = "util",
    srcs = ["neocortex/util.cpp"],
    hdrs = ["neocortex/util.h"],
    deps = [
        ":platform",
    ],
)

cc_library(
    name = "zobrist",
    srcs = ["neocortex/zobrist.cpp"],
    hdrs = ["neocortex/zobrist.h"],
    deps = [
        ":piece",
        ":square",
    ],
)

cc_test(
  name = "neocortex_test",
    srcs = ["test/test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":attacks",
        ":bitboard",
        ":board",
        ":eval",
        ":eval_consts",
        ":perft",
        ":piece",
        ":search",
        ":tt",
        ":zobrist",
        "@gtest//:gtest_main",
    ],
)
 